--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "@types/aws-sdk": "^2.7.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/otp-generator": "^4.0.0",
     "nodemon": "^2.0.22",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "loadtest": "*"
   },
   "dependencies": {
     "aws-sdk": "^2.1346.0",
+    "axios": "^1.3.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
+    "mongoose": "^7.0.3",
     "otp-generator": "^4.0.1"
   }
 }
